--- a/src/main/webapp/pages/sidebar.html
+++ b/src/main/webapp/pages/sidebar.html
@@ -14,11 +14,11 @@
                 <li id="project_create_li"><a href="project-create.html">创建项目</a></li>
             </ul>
         </li>
-        <li class="submenu">
+        <li class="submenu" id="user_li">
             <a href="#"><i class="icon icon-th-list"></i> <span>人员管理</span></a>
             <ul>
-                <li><a href="user-detail.html">人员查询</a></li>
-                <li><a href="user-create.html">添加员工</a></li>
+                <li id="user_list_li"><a href="user-list.html">人员查询</a></li>
+                <li id="user_create_li"><a href="user-create.html">添加员工</a></li>
             </ul>
         </li>
         <li class="submenu" id="meeting-li">
