--- a/src/main/webapp/pages/department-edit.html
+++ b/src/main/webapp/pages/department-edit.html
@@ -31,6 +31,9 @@
 <div id="content">
     <div id="content-header">
         <h1>编辑部门</h1>
+        <div class="btn-group">
+            <a class="btn btn-navbar" onclick="javascript:history.back(-1);" style="margin-right: 5px">返回</a>
+        </div>
     </div>
     <div class="container-fluid">
         <div class="row-fluid">
