--- a/src/main/webapp/pages/meeting-overview.html
+++ b/src/main/webapp/pages/meeting-overview.html
@@ -18,6 +18,7 @@
 <div id="sidebar" ng-include="'sidebar.html'"></div>
 
 <div id="content">
+    <script src="js/meeting-overview.js"></script>
     <div id="content-header">
         <h1>我的会议</h1>
     </div>
@@ -32,7 +33,8 @@
                         <h5>会议列表</h5>
                     </div>
                     <div class="widget-content nopadding">
-                        <table class="table table-bordered table-striped table-hover data-table">
+                        <!--<table class="table table-bordered table-striped table-hover data-table">-->
+                        <table class="table table-striped table-bordered">
                             <thead>
                             <tr>
                                 <th>会议名称</th>
@@ -41,8 +43,6 @@
                                 <th>会议地点</th>
                                 <th>发起人</th>
                             </tr>
-                            </thead>
-                            <tbody id="tableBody">
                             <tr ng-repeat="m in meetings">
                                 <td><a ng-href="meeting-detail.html?companyId={{m.companyId}}&id={{m.id}}&&preUrl=meeting-overview.html">{{ m.name }}</a></td>
                                 <td><a ng-href="project-detail.html?companyId={{m.companyId}}&id={{m.projectId}}">{{ m.projectName }}</a></td>
@@ -50,6 +50,9 @@
                                 <td>{{ m.location }}</td>
                                 <td><a ng-href="user-detail.html?companyId={{m.companyId}}&id={{m.ownerId}}">{{m.ownerName}}</a></td>
                             </tr>
+                            </thead>
+                            <tbody id="tableBody">
+
                             </tbody>
                         </table>
                     </div>
@@ -72,6 +75,5 @@
 <script src="js/lib/unicorn.dashboard.js"></script>
 <script src="js/lib/bootstrap-treeview.min.js"></script>
 <script src="js/util.js"></script>
-<script src="js/meeting-overview.js"></script>
 </body>
 </html>
